--- a/JavaScript/.github/workflows/test.yml
+++ b/JavaScript/.github/workflows/test.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - run: npm init
+      - run : npm install --save-dev jest
+
       - name: "checkout"
         uses: actions/checkout@v3
         with:
